# tumor-semseg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICES.md  README.md  pyproject.toml
.github/workflows/: release.yaml  unit_tests.yaml
my_package/: __main__.py  main.py
notebooks/: kaggle_tutorial.ipynb
test/: conftest.py  test_auto_fuse_modules.py  test_deeplab.py  test_dice_ce_edge_loss.py  test_loss.py  test_main.py  test_unet.py
tumor_semseg/architecture/: deeplab.py  unet.py  unet_blocks.py  utils.py
tumor_semseg/configuration/: datamodule.yaml  export.yaml  hydra.yaml  main.yaml  main_train.yaml  module.yaml  trainer.yaml
tumor_semseg/configuration/model/: deeplab.yaml  smp.yaml  unet.yaml
tumor_semseg/console/: train.py
tumor_semseg/data/: augmentations.py  brain_mri_datamodule.py
tumor_semseg/dataset/: augmentations.py  brain_mri.py
tumor_semseg/loss/: dice_ce_edge_loss.py  semseg_losses.py  utils.py
tumor_semseg/module/: brain_mri_module.py  callbacks.py  quantization.py  unet_module.py  utils.py
tumor_semseg/optimize/: optimizer.py  scheduler.py
tumor_semseg/optimizer/: base_optimizer.py
tumor_semseg/script/: train.py
tumor_semseg/scripts/: evaluate.py  export.py  inference.py  train.py
