[tool.poetry]
name = "my-package"
version = "v0.1.0"
description = "Simple and effective Python project template"
authors = ["Juan Rivero Sesma <jriverosesma@gmail.com>"]
readme = "README.md"
include = ["NOTICES", "LICENSE", "CHANGELOG.md"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/jriverosesma/python-project"
"Issue Tracker" = "https://github.com/jriverosesma/python-project/issues"

[tool.poetry.dependencies]
python = "^3.10"

# Development
black = { version = "^23.9.1", optional = true }
bumpver = { version = "^2023.1126", optional = true }
isort = { version = "^5.12.0", optional = true }
flake8 = { version = "^6.1.0", optional = true }
pre-commit = { version = "^3.4.0", optional = true }
pip-licenses = { version = "^4.3.2", optional = true }

# Test
pytest = { version = "^7.4.2", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
pytest-sugar = { version = "^0.9.7", optional = true }

[tool.poetry.extras]
dev = ["black", "bumpver", "isort", "flake8", "pre-commit", "pip-licenses"]
test = ["pytest", "pytest-mock", "pytest-sugar"]
all = ["black", "bumpver", "isort", "flake8", "pre-commit", "pip-licenses", "pytest", "pytest-mock", "pytest-sugar"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_package_script = "my_package.main:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["my_package"]
import_heading_firstparty = "My Package"


[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit          = true
tag             = true
push            = true
commit_message  = "Bump version: {old_version} → {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"my_package/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.pytest.ini_options]
minversion = "7.4"
markers = [
    "slow: Slow tests",
    "failing: Tests which need to be fixed",
]
