[tool.poetry]
name = "tumor_semseg"
version = "v0.1.0"
description = "Semantic segmentation for tumor detection"
authors = ["Juan Rivero Sesma <jriverosesma@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["NOTICES", "LICENSE", "CHANGELOG.md"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/jriverosesma/tumor-semantic-segmentation"
"Issue Tracker" = "https://github.com/jriverosesma/tumor-semantic-segmentation/issues"

[tool.poetry.dependencies]
python = "^3.10"

# Development
black = { version = "^23.9.1", optional = true }
bumpver = { version = "^2023.1126", optional = true }
isort = { version = "^5.12.0", optional = true }
flake8 = { version = "^6.1.0", optional = true }
pre-commit = { version = "^3.4.0", optional = true }
pip-licenses = { version = "^4.3.2", optional = true }

# Test
pytest = { version = "^7.4.2", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
pytest-sugar = { version = "^0.9.7", optional = true }

[tool.poetry.extras]
dev = ["black", "bumpver", "isort", "flake8", "pre-commit", "pip-licenses"]
test = ["pytest", "pytest-mock", "pytest-sugar"]
all = ["black", "bumpver", "isort", "flake8", "pre-commit", "pip-licenses", "pytest", "pytest-mock", "pytest-sugar"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
semseg_train = "tumor_semseg.scripts.train:main"
semseg_eval = "tumor_semseg.scripts.evaluate:main"
semseg_infer = "tumor_semseg.scripts.inference:main"
semseg_export = "tumor_semseg.scripts.export:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["tumor_semseg"]
import_heading_stdlib = "Standard"
import_heading_thirdparty = "Third-Party"
import_heading_firstparty = "TumorSemSeg"

[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit          = true
tag             = true
push            = true
commit_message  = "Bump version: {old_version} → {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"tumor_semseg/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.pytest.ini_options]
minversion = "7.4"
markers = [
    "slow: Slow tests",
    "failing: Tests which need to be fixed",
]
